--- a/kubefiles/kafka-cluster-template.yaml
+++ b/kubefiles/kafka-cluster-template.yaml
@@ -1,18 +1,19 @@
 apiVersion: kafka.strimzi.io/v1beta1
 kind: Kafka
 metadata:
-  name: registry-kafka
+  name: {NAME}
+  namespace: {NAMESPACE}
 spec:
   kafka:
     version: 2.4.0
-    replicas: 3
+    replicas: {REPLICAS}
     listeners:
       plain: {}
       tls: {}
     config:
-      offsets.topic.replication.factor: 3
-      transaction.state.log.replication.factor: 3
-      transaction.state.log.min.isr: 2
+      offsets.topic.replication.factor: {REPLICAS}
+      transaction.state.log.replication.factor: {REPLICAS}
+      transaction.state.log.min.isr: {MIN_ISR}
       log.message.format.version: "2.4"
     storage:
       type: persistent-claim
