fix connectors test on ocp

--- a/.github/workflows/apicurio-ci.yaml
+++ b/.github/workflows/apicurio-ci.yaml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   tests:
-    name: Apicurio Registry Tests
+    name: Kubernetes Tests
     runs-on: ubuntu-18.04
     strategy:
       fail-fast: false
