--- a/.github/workflows/apicurio-ci.yaml
+++ b/.github/workflows/apicurio-ci.yaml
@@ -47,4 +47,10 @@ jobs:
         with:
           name: tests-logs
           path: artifacts
-          
+
+      - name: Send CI message
+        if: github.event_name == 'schedule'
+        env:
+          CI_MESSAGE_HEADER: Registry scheduled ${{ matrix.test_profile }} Tests
+          CI_MESSAGES_ENDPOINT: ${{ secrets.CI_MESSAGES_ENDPOINT }}
+        run: make send-ci-message
