--- a/.github/workflows/operator-ci.yaml
+++ b/.github/workflows/operator-ci.yaml
@@ -29,4 +29,10 @@ jobs:
         with:
           name: tests-logs
           path: artifacts
-          
+
+      - name: Send CI message
+        if: github.event_name == 'schedule' || github.event_name == 'push'
+        env:
+          CI_MESSAGE_HEADER: Operator scheduled Tests
+          CI_MESSAGES_ENDPOINT: ${{ secrets.CI_MESSAGES_ENDPOINT }}
+        run: make send-ci-message
