disable CI messages

--- a/.github/workflows/apicurio-ci.yaml
+++ b/.github/workflows/apicurio-ci.yaml
@@ -50,8 +50,8 @@ jobs:
           name: tests-logs
           path: artifacts
 
-      - name: Send CI message
-        if: github.event_name == 'schedule'
-        env:
-          CI_MESSAGES_ENDPOINT: ${{ secrets.CI_MESSAGES_ENDPOINT }}
-        run: make send-ci-message
+      # - name: Send CI message
+      #   if: github.event_name == 'schedule'
+      #   env:
+      #     CI_MESSAGES_ENDPOINT: ${{ secrets.CI_MESSAGES_ENDPOINT }}
+      #   run: make send-ci-message
