--- a/.github/workflows/apicurio-ci.yaml
+++ b/.github/workflows/apicurio-ci.yaml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        test_profile: [smoke, acceptance, cluster, upgrade]
+        test_profile: [smoke, acceptance, cluster] #, upgrade]
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
