--- a/.github/workflows/apicurio-ci.yaml
+++ b/.github/workflows/apicurio-ci.yaml
@@ -17,24 +17,16 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        test_profile: [smoke, acceptance, cluster] #, upgrade]
+        test_profile: [smoke, acceptance, serdes] #, upgrade]
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
 
-      - name: Set up JDK 1.8
+      - name: Set up JDK 11
         uses: AdoptOpenJDK/install-jdk@v1
         with:
-          version: '8'
+          version: '11'
           architecture: x64
-
-      - name: Cache Dependencies
-        uses: actions/cache@v1
-        with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
 
       - name: Kubernetes Tests
         run:  E2E_APICURIO_TESTS_PROFILE=${{ matrix.test_profile }} ./.github/scripts/test_apicurio_kubernetes.sh
