use postgres 12 in backupandrestore test

--- a/scripts/dbplayground/Dockerfile
+++ b/scripts/dbplayground/Dockerfile
@@ -1,4 +1,5 @@
-FROM centos/postgresql-10-centos7:20200917-804ef01
+# FROM centos/postgresql-10-centos7:20200917-804ef01
+FROM centos/postgresql-12-centos7:20210215-8de34fd
 
 # RUN yum install postgresql -y
 COPY *.sh ./
