--- a/scripts/dbplayground/Makefile
+++ b/scripts/dbplayground/Makefile
@@ -1,5 +1,6 @@
 
-IMAGE_NAME?=quay.io/rh_integration/service-registry-dbplayground:pg10
+# IMAGE_NAME?=quay.io/rh_integration/service-registry-dbplayground:pg10
+IMAGE_NAME?=quay.io/rh_integration/service-registry-dbplayground:pg12
 
 build:
 	docker build -t $(IMAGE_NAME) .
