update kafka clusters listeners

--- a/kubefiles/kafka-cluster-external-ocp-template.yaml
+++ b/kubefiles/kafka-cluster-external-ocp-template.yaml
@@ -1,4 +1,4 @@
-apiVersion: kafka.strimzi.io/v1beta1
+apiVersion: kafka.strimzi.io/v1beta2
 kind: Kafka
 metadata:
   name: {NAME}
@@ -8,11 +8,23 @@ spec:
     version: 2.7.0
     replicas: 1
     listeners:
-      external:
-        type: route
-        tls: false
-      plain: {}
-      tls: {}
+      # external:
+      #   type: route
+      #   tls: false
+      # plain: {}
+      # tls: {}
+    - name: plain
+      port: 9092
+      type: internal
+      tls: false
+    - name: tls
+      port: 9093
+      type: internal
+      tls: true
+    - name: external
+      port: 9094
+      type: route
+      tls: true
     config:
       offsets.topic.replication.factor: 1
       transaction.state.log.replication.factor: 1
