--- a/kubefiles/kafka-cluster-secured-template.yaml
+++ b/kubefiles/kafka-cluster-secured-template.yaml
@@ -1,4 +1,4 @@
-apiVersion: kafka.strimzi.io/v1beta1
+apiVersion: kafka.strimzi.io/v1beta2
 kind: Kafka
 metadata:
   name: {NAME}
@@ -8,10 +8,16 @@ spec:
     version: 2.7.0
     replicas: {REPLICAS}
     listeners:
-      plain: {}
-      tls: 
-        authentication:
-          type: {AUTH_TYPE}
+    - name: plain
+      port: 9092
+      type: internal
+      tls: false
+    - name: tls
+      port: 9093
+      type: internal
+      tls: true
+      authentication:
+        type: {AUTH_TYPE}
     config:
       offsets.topic.replication.factor: {REPLICAS}
       transaction.state.log.replication.factor: {REPLICAS}
