--- a/kubefiles/kafka-cluster-external-ocp-template.yaml
+++ b/kubefiles/kafka-cluster-external-ocp-template.yaml
@@ -24,7 +24,7 @@ spec:
     - name: external
       port: 9094
       type: route
-      tls: true
+      tls: false
     config:
       offsets.topic.replication.factor: 1
       transaction.state.log.replication.factor: 1
