--- a/kubefiles/kafka-cluster-external-template.yaml
+++ b/kubefiles/kafka-cluster-external-template.yaml
@@ -19,7 +19,7 @@ spec:
     - name: external
       port: 9094
       type: ingress
-      tls: true
+      tls: false
       configuration:
         bootstrap:
           host: {BOOTSTRAP_HOST}
